--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
   </body>
   
-  <table class="table">
-  <table border="1" cellspacing="0">
-  <thead>
+  <table class="table" border="1">
+ 
     <tr>
     <th scope="col">Time</th>
     <th scope="col">Mon</th>
